2005-12-15 - johan
Some improvements to the memory allocation debug facilities.

2005-12-13 - johan
Made it possible to preallocate memory.
Added extensive memory allocation debug facilities.

2005-12-13 - standa
Fixed a forgotten 0x4000 flag use for vector fonts also textlib.c.

2005-12-12 - johan
Corrected a bug concerning allocation of the negative palette indices.

2005-12-09 - johan
Corrected a bug that recently crept in regarding names for fonts
handled by the FreeType2 engine.

2005-12-07 - johan
Fixed the colour selection in the bitplane driver.
Corrected OR mode fill for the bitplane driver.
The mouse cursor for the bitplane driver is now clipped against the
screen and has correct colours and hotspot.
Removed redirection for keyboard handling.

2005-12-06 - johan
Corrected the pixel size setting for the monochrome and bitplane drivers.

2005-12-05 - johan
Made some changes to enable gcc build for 68000.

2005-12-04 - johan
Added line drawing support to the bitplane driver.

2005-12-02 - johan
A few more bug fixes for the bitplane driver.

2005-12-01 - johan
Fixed a serious bug concerning colour handling in the bitplane driver.

2005-11-30 - johan
Various improvements for the bitplane driver.
Added fill routine from the EmuTOS VDI to the bitplane driver.
Added mouse drawing support to the bitplane driver.

2005-11-29 - johan
Restored the Calamus clip rectangle handling. It is necessary since the
code is actually "borrowing" the original workstation opened by the AES.

2005-11-28 - johan
Added a bitplane driver written in C, based on a significantly modified
version of the EmuTOS VDI blit routines. Definitely needs more work,
but it can at least display a desktop (sort of ;-)

2005-11-23 - standa
Basic ft2 bitmap font support (tested with MS Win .fon fonts).
Performed tests of type-1 as well as TrueType fonts.

A few implementaiton notes:
* font->underline == 0 is used to determine whether metrics for the
  particular font->size were loaded