@@ -1,7 +1,7 @@
 /*
  * fVDI utility functions
  *
- * $Id: utility.c,v 1.28 2005-12-15 09:17:58 johan Exp $
+ * $Id: utility.c,v 1.29 2005-12-17 00:59:12 standa Exp $
  *
  * Copyright 1997-2003, Johan Klockars 
  * This software is licensed under the GNU General Public License.
@@ -51,13 +51,13 @@ long eddi = 0;
 long mint = 0;
 long magic = 0;
 
-typedef struct {  /* NatFeat code */
-        long magic;
-        long CDECL(*nfGetID) (const char *);
-        long CDECL(*nfCall) (long ID, ...);
-} NatFeatCookie;
-NatFeatCookie *nf_ptr = 0;
-long nf_printf_id = 0;
+/* NatFeat functions defined */
+static long _NF_getid = 0x73004e75L;
+static long _NF_call  = 0x73014e75L;
+#define nfGetID(n)  (((long __CDECL (*)(const char *))&_NF_getid)n)
+#define nfCall(n)   (((long __CDECL (*)(long, ...))&_NF_call)n)
+
+long nf_print_id = 0;
 
 long pid_addr = 0;        /* Copied into 'pid' when fVDI is installed */
 long *pid = 0;
@@ -321,12 +321,7 @@ void check_cookies(void)
    if ((addr = get_cookie("MagX", 0)) != -1)
       magic = (long)addr;
    if ((addr = get_cookie("__NF", 0)) != -1) {
-      nf_ptr = (NatFeatCookie *)addr;
-      if (nf_ptr->magic != 0x20021021L)   /* NatFeat magic constant */
-        nf_ptr = 0;
-      else {
-        nf_printf_id = nf_ptr->nfGetID("DEBUGPRINTF");
-      }
+      nf_print_id = nfGetID(("NF_STDERR"));
    }
 }
 
@@ -1658,12 +1653,8 @@ int puts(const char *text)
 {
    if (debug_out == -2)
       Cconws(text);
-   else if (debug_out == -1)
-#if 0
-      ((void CDECL (*)(const char *))&ARAnyM_out)(text);
-#else
-     nf_ptr->nfCall(nf_printf_id, text);
-#endif
+   else if (debug_out == -1 && nf_print_id)
+      nfCall((nf_print_id,text));
    else
       while (*text)
          Bconout(debug_out, *text++);
